// Copyright 2025 Gravitational, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package teleport.sessionrecordingmetadata.v1;

import "teleport/header/v1/metadata.proto";

option go_package = "github.com/gravitational/teleport/api/gen/proto/go/teleport/sessionrecordingmetatada/v1;sessionrecordingmetatadav1";

// SessionRecordingMetadata stores metadata for session recordings
message SessionRecordingMetadata {
  // The kind of resource represented.
  string kind = 1;
  // The version of the resource being represented.
  string version = 2;
  // Common metadata that all resources share.
  teleport.header.v1.Metadata metadata = 3;
  // Spec is session recording metadata spec
  SessionRecordingMetadataSpec spec = 4;
}

// SessionRecordingMetadata stores metadata for session recordings
message SessionRecordingMetadataSpec {
  optional string summary = 2;
}
